correcting a mistake in a tag

--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,13 @@
   <div class="top">
     <img src="images/image-victor.jpg" alt="Profile Image">
   </div>
+
   <div class="middle">
     <div class="profile">
-    <h1>Victor Crest <bdi>26</bdi></h1>
+    <h1>Victor Crest <span class="age">26</span></h1>
     <h2>London</h2>
-  </div></div>
+    </div>
+  </div>
   <div class="bottom">
     <span></span>
     <table>
